// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCodeMetrics should return the right metrics for apps 1`] = `
[
  "alert_status",
  "ncloc",
  "software_quality_security_issues",
  "software_quality_reliability_issues",
  "software_quality_maintainability_issues",
  "vulnerabilities",
  "bugs",
  "code_smells",
  "security_hotspots",
  "coverage",
  "duplicated_lines_density",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: false, portfolioMetrics: AicaAgnostic } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: false, portfolioMetrics: AllCodeAicaAgnostic } 1`] = `
[
  "releasability_rating",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: false, portfolioMetrics: AllCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: false, portfolioMetrics: AllCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: false, portfolioMetrics: NewCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "new_lines",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: false, portfolioMetrics: NewCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "new_lines",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: false, portfolioMetrics: Unspecified } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: true, portfolioMetrics: AicaAgnostic } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: true, portfolioMetrics: AllCodeAicaAgnostic } 1`] = `
[
  "releasability_rating",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: true, portfolioMetrics: AllCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: true, portfolioMetrics: AllCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: true, portfolioMetrics: NewCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "new_lines",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: true, portfolioMetrics: NewCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "new_lines",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: false, includeQGStatus: true, portfolioMetrics: Unspecified } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: false, portfolioMetrics: AicaAgnostic } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "contains_ai_code",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: false, portfolioMetrics: AllCodeAicaAgnostic } 1`] = `
[
  "releasability_rating",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
  "contains_ai_code",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: false, portfolioMetrics: AllCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
  "contains_ai_code",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: false, portfolioMetrics: AllCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
  "contains_ai_code",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: false, portfolioMetrics: NewCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "new_lines",
  "contains_ai_code",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: false, portfolioMetrics: NewCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "new_lines",
  "contains_ai_code",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: false, portfolioMetrics: Unspecified } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
  "contains_ai_code",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: true, portfolioMetrics: AicaAgnostic } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "contains_ai_code",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: true, portfolioMetrics: AllCodeAicaAgnostic } 1`] = `
[
  "releasability_rating",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
  "contains_ai_code",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: true, portfolioMetrics: AllCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
  "contains_ai_code",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: true, portfolioMetrics: AllCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
  "contains_ai_code",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: true, portfolioMetrics: NewCodeAicaDisabled } 1`] = `
[
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "new_lines",
  "contains_ai_code",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: true, portfolioMetrics: NewCodeAicaEnabled } 1`] = `
[
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "new_lines",
  "contains_ai_code",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for portfolios with options { includeContainsAiCode: true, includeQGStatus: true, portfolioMetrics: Unspecified } 1`] = `
[
  "releasability_rating",
  "new_security_rating",
  "new_software_quality_security_rating",
  "new_reliability_rating",
  "new_software_quality_reliability_rating",
  "new_maintainability_rating",
  "new_software_quality_maintainability_rating",
  "new_security_review_rating",
  "new_lines",
  "releasability_rating_with_aica",
  "new_security_rating_with_aica",
  "new_software_quality_security_rating_with_aica",
  "new_reliability_rating_with_aica",
  "new_software_quality_reliability_rating_with_aica",
  "new_maintainability_rating_with_aica",
  "new_software_quality_maintainability_rating_with_aica",
  "new_security_review_rating_with_aica",
  "releasability_rating_without_aica",
  "new_security_rating_without_aica",
  "new_software_quality_security_rating_without_aica",
  "new_reliability_rating_without_aica",
  "new_software_quality_reliability_rating_without_aica",
  "new_maintainability_rating_without_aica",
  "new_software_quality_maintainability_rating_without_aica",
  "new_security_review_rating_without_aica",
  "security_rating",
  "software_quality_security_rating",
  "reliability_rating",
  "software_quality_reliability_rating",
  "sqale_rating",
  "software_quality_maintainability_rating",
  "security_review_rating",
  "ncloc",
  "security_rating_with_aica",
  "software_quality_security_rating_with_aica",
  "reliability_rating_with_aica",
  "software_quality_reliability_rating_with_aica",
  "sqale_rating_with_aica",
  "software_quality_maintainability_rating_with_aica",
  "security_review_rating_with_aica",
  "ncloc_with_aica",
  "security_rating_without_aica",
  "software_quality_security_rating_without_aica",
  "reliability_rating_without_aica",
  "software_quality_reliability_rating_without_aica",
  "sqale_rating_without_aica",
  "software_quality_maintainability_rating_without_aica",
  "security_review_rating_without_aica",
  "ncloc_without_aica",
  "contains_ai_code",
  "alert_status",
]
`;

exports[`getCodeMetrics should return the right metrics for projects 1`] = `
[
  "ncloc",
  "software_quality_security_issues",
  "software_quality_reliability_issues",
  "software_quality_maintainability_issues",
  "vulnerabilities",
  "bugs",
  "code_smells",
  "security_hotspots",
  "coverage",
  "duplicated_lines_density",
]
`;

exports[`getCodeMetrics should return the right metrics for projects 2`] = `
[
  "new_lines",
  "software_quality_security_issues",
  "software_quality_reliability_issues",
  "software_quality_maintainability_issues",
  "vulnerabilities",
  "bugs",
  "code_smells",
  "security_hotspots",
  "new_coverage",
  "new_duplicated_lines_density",
]
`;
